--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -9,35 +9,47 @@
       <div id="map-london-container">
           {{> googleMap name="map" options=mapOptions}}
       </div>
-    <!--<div class="col s6">-->
-      <!--<h1 class="center-align" id="offerSection">Make Offer</h1>-->
-      <!--<form>-->
-        <!--<div class="input-field">-->
-          <!--<label for="price">Price</label>-->
-          <!--<input id="price" type="text" name="price"-->
-          <!--onfocus="document.getElementById('price').placeholder = '£';">-->
-        <!--</div>-->
-        <!--<h3>Current Requests</h3>-->
-        <!--{{#each requests}}-->
-        <!--<p>-->
-        <!--<input class="with-gap" name="requestId" type="radio" id={{_id}} i-->
-          <!--value={{_id}}>-->
-        <!--<label for={{_id}}>-->
-          <!--{{#with items itemId}}-->
-            <!--Request: {{description}} <br>-->
-            <!--Created on: {{formatDate createdAt}} <br>-->
-            <!--{{#each images imageIds}}-->
-            <!--<div class="container">-->
-              <!--<a href="{{this.url}}" target="_blank"><img src="{{this.url store='images' uploading='/van.ico' storing='/van.ico'}}" alt="" class="img-thumbnail responsive-img" /></a>-->
-            <!--</div>-->
-            <!--{{/each}}-->
-          <!--{{/with}}-->
-        <!--</label>-->
-        <!--</p>-->
-        <!--{{/each}}-->
-        <!--<button type="submit" class="btn">Make Offer</button>-->
-      <!--</form>-->
-    <!--</div>-->
+
+    <!-- Modal Structure -->
+    <div id="modal1" class="modal bottom-sheet">
+        <div class="modal-content">
+            <h4>Requests in {{getArea}} : ({{getNum getArea}})</h4>
+            <div class="col s6">
+                <h1 class="center-align" id="offerSection">Make Offer</h1>
+                <form>
+                    <div class="input-field">
+                        <label for="price">Price</label>
+                        <input id="price" type="text" name="price"
+                               onfocus="document.getElementById('price').placeholder = '£';">
+                    </div>
+                    <h3>Current Requests</h3>
+                    {{#each requests getArea}}
+                        <p>
+                            <input class="with-gap" name="requestId" type="radio" id={{_id}} i
+                                   value={{_id}}>
+                            <label for={{_id}}>
+                                {{#with items itemId}}
+                                    Request: {{description}} <br>
+                                    Created on: {{formatDate createdAt}} <br>
+                                    {{#each images imageIds}}
+                                        <div class="container">
+                                            <a href="{{this.url}}" target="_blank"><img src="{{this.url store='images' uploading='/van.ico' storing='/van.ico'}}" alt="" class="img-thumbnail responsive-img" /></a>
+                                        </div>
+                                    {{/each}}
+                                {{/with}}
+                            </label>
+                        </p>
+                    {{/each}}
+                    <button type="submit" class="btn">Make Offer</button>
+                </form>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Back to Map</a>
+        </div>
+    </div>
+
+
 
 </template>
 
