Add specific css class 'marker-overlay' (used for map in requestPickup) to display overlaid marker

--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -16,7 +16,7 @@
           <button id="last-loc" class="controls map-button">Last Request Location</button>
         </div>
       </div>
-      <div id="map-container">
+      <div id="map-container" class="marker-overlay">
         {{> map}}
       </div>
     </div>
