--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -34,19 +34,40 @@
 
                 </div>
                     <div class="collapsible-body">
-                        <form>
-                            <div class="input-field">
-                                <label for="price">Price</label>
-                                <input id="price" type="text" name="price"
-                                       onfocus="document.getElementById('price').placeholder = '£';">
+                        {{#if hasAlreadyMadeOffer ../../_id}}
+                            <h2>You have already made an offer of £{{getOfferPrice ../../_id}} on this item !</h2>
+                            <p> If you wish to lower your offer, you can update your offer up to the end of the bid window</p>
+                        <br>
+                            <div class="col s10">
+                                <form class="update">
+                                    <div class="row">
+                                        <div class="input-field col s8" style="top: -28px;">
+                                            <input type="text" name="id" id="id" value="{{getOfferId ../../_id}}" hidden>
+                                            <input type="text" name="price" onfocus="document.getElementById('price').placeholder = '£';">
+                                            <label for="price">Price</label>
+                                        </div>
+                                        <div class="col s4">
+                                            <button type="update" class="btn">Update
+                                                Price</button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
+                        {{else}}
+                            <form class="input">
+                                <div class="input-field">
+                                    <label for="price">Price</label>
+                                    <input id="price" type="text" name="price"
+                                           onfocus="document.getElementById('price').placeholder = '£';">
+                                </div>
 
-                            <input class="with-gap" name="requestId" type="radio" id={{../../_id}} i
-                                   value={{../../_id}}>
-                            <label for={{../../_id}}>
-                            </label>
-                            <button type="submit" class="btn">Make Offer</button>
-                        </form>
+                                <input class="with-gap" name="requestId" type="radio" id={{../../_id}} i
+                                       value={{../../_id}}>
+                                <label for={{../../_id}}>
+                                </label>
+                                <button type="submit" class="btn">Make Offer</button>
+                            </form>
+                        {{/if}}
 
                     </div>
                     </li>
