Updates greeting text to refer to waste and not items

--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -13,7 +13,7 @@
     <div id="pop">
         <h2>Welcome to KerbIt</h2>
         <br>
-        <p>Please choose the location of your item, and press </p>
+        <p>Please choose the location of your waste, then press </p>
         <button class="modal-trigger btn waves-effect waves-light" data-target="modal1" type="submit" name="action"
                 onclick="document.getElementById('pop').style.display='none'">Submit
         </button>
