--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -24,48 +24,102 @@
     <div id="modal1" class="modal modal-fixed-footer">
         <form class="details">
             <div class="modal-content">
-                <h4>New Collection</h4>
-                <p>Please describe your waste as accurately as possible</p>
 
-                <div class="input-field">
-                    <label for="description">Description</label>
-                    <textarea id="description" name="description" class="materialize-textarea"></textarea>
-                </div>
-                <div class="file-field input-field">
-                    <div class="btn">
-                        <span>Upload image</span>
-                        <input type="file" id="clientImage" name="clientImage" accept="images/*" multiple>
+                <div class="row">
+                    <div class="col s12">
+                        <ul class="tabs">
+                            <li class="tab col s3"><a class="active" href="#1">Description</a></li>
+                            <li class="tab col s3"><a href="#2">Image</a></li>
+                            <li class="tab col s3"><a href="#3">Size</a></li>
+                            <li class="tab col s3"><a href="#4">Bid Window</a></li>
+                        </ul>
                     </div>
-                    <div class="file-path-wrapper">
-                        <input class="file-path validate" type="text">
+                    <div id="1" class="col s12"><h4>New Collection</h4>
+                        <p>Please describe your waste as accurately as possible</p>
+
+                        <div class="input-field">
+                            <label for="description">Description</label>
+                            <textarea id="description" name="description" class="materialize-textarea"></textarea>
+                        </div>
+                    </div>
+                    <div id="2" class="col s12">
+                        <p> Please upload an image to provide drivers with a good idea of makeup of the waste. You can
+                            upload multiple photos. At least one image must show the entire amount of waste that is
+                            intended to
+                            be cleared.</p>
+                        <div class="file-field input-field">
+                            <div class="btn">
+                                <span>Upload image</span>
+                                <input type="file" id="clientImage" name="clientImage" accept="images/*" multiple>
+                            </div>
+                            <div class="file-path-wrapper">
+                                <input class="file-path validate" type="text">
+                            </div>
+                        </div>
+                        <img class="responsive-img" src="/Camera.png">
+                    </div>
+                    <div id="3" class="col s12">
+                        <div class="row">
+                            <div class="col s12">
+                                <ul class="tabs">
+                                    <li class="tab col s3"><a href="#bags">Measure by bin bags</a></li>
+                                    <li class="tab col s3"><a class="active" href="#yards">Measure by Cubic Yards</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div id="bags" class="col s12">
+                                <p>Please provide an approximation for the size of the waste by the number of standard
+                                    UK
+                                    supermarket
+                                    binbags, ranging from 1 to 10+. Should your waste not be contained/fit in bin bags,
+                                    dont worry,
+                                    this is just to provide a size estimate</p>
+                                <p class="range-field">
+                                    <label for="sizeRequired">Size required</label>
+                                    <input type="range" id="sizeRequired" name="sizeRequired" min="1" max="10"
+                                           value="5"/>
+
+                                </p>
+                                <img class="responsive-img" src="/binbagscale.jpg">
+                            </div>
+                            <div id="yards" class="col s12">
+                                <p>Please enter a size in cubic yards. A cubic yard is 3ft x 3ft x 3ft, which is about the size of two washing machines</p>
+                                <input type="number" min="1" step="1" id="sizeCubic" name="sizeCubic" value="0" />
+                                <img class="responsive-img" src="/washingmachine.png"><img class="responsive-img" src="/washingmachine.png">
+                            </div>
+
+                        </div>
+
+
+                    </div>
+
+                    <div id="4" class="col s12">
+                        <p> Please select a length of time for the bid window. A bid window is the amount of time
+                            potential drivers will be able to see your request on the map view, and place offers.</p>
+                        <p class="range-field">
+
+                            <input name="bidWindow" type="radio" id="oneHour" value="1"/>
+                            <label for="oneHour">1 Hour</label>
+
+                            <input name="bidWindow" type="radio" id="threeHour" value="3"/>
+                            <label for="threeHour">3 Hours</label>
+
+                            <input name="bidWindow" type="radio" id="fiveHour" value="6"/>
+                            <label for="fiveHour">6 Hours</label>
+
+                            <input name="bidWindow" type="radio" id="twelveHour" value="12"/>
+                            <label for="twelveHour">12 Hours</label>
+
+                            <input name="bidWindow" type="radio" id="day" value="24"/>
+                            <label for="day">24 Hours</label>
+
+                        </p>
+
+
                     </div>
                 </div>
-                <p class="range-field">
-                    <label for="sizeRequired">Size required</label>
-                    <input type="range" id="sizeRequired" name="sizeRequired" min="1" max="10"
-                           value="5"/>
-
-                </p>
 
 
-                <p class="range-field">
-
-                    <input name="bidWindow" type="radio" id="oneHour" value="1"/>
-                    <label for="oneHour">1 Hour</label>
-
-                    <input name="bidWindow" type="radio" id="threeHour" value="3"/>
-                    <label for="threeHour">3 Hours</label>
-
-                    <input name="bidWindow" type="radio" id="fiveHour" value="6"/>
-                    <label for="fiveHour">6 Hours</label>
-
-                    <input name="bidWindow" type="radio" id="twelveHour" value="12"/>
-                    <label for="twelveHour">12 Hours</label>
-
-                    <input name="bidWindow" type="radio" id="day" value="24"/>
-                    <label for="day">24 Hours</label>
-
-                </p>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn waves-effect waves-green btn-flat ">Submit
