--- a/www/kerbit/imports/ui/pages/driverHistory.html
+++ b/www/kerbit/imports/ui/pages/driverHistory.html
@@ -11,19 +11,21 @@
      <ul class="collapsible popout" data-collapsible="accordion">
        {{#each transactions}}
        <li>
-         <div class="collapsible-header active">
+         <div class="collapsible-header active override-padding-left-0">
+           <div class="extra-padding-left-15 border-bottom-thin">
            <i class="material-icons">receipt</i>
-           {{#each ItemWithItemId itemId}}
-             <p>{{description}}</p>
-           {{/each}} 
+           {{#with getItem itemId}}
+             {{description}}
+           {{/with}}
+           </div>
+           {{> Transaction}}
          </div>
          <div class="collapsible-body">
-           <div class="container">
-             {{>Transaction}}
-           </div>
+           {{> TransactionDetails}}
          </div>
        </li>
        {{/each}}
      </ul>
    </div>
+
 </template>
